# MultiDubber

./: .gitignore  README.md  api_client.py  audio_processor.py  config.py  dispatcher.py  duration_predictor.joblib  gui.pyw  main.py  model.py  pyproject.toml  requirements.txt  runTTS.bat  subtitle_parser.py  utils.py
