[project]
name = "multtts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gradio-client>=2.3.0",
    "joblib>=1.5.3",
    "numpy>=2.4.3",
    "pydub>=0.25.1",
    "pyqt6>=6.10.2",
    "pyrubberband>=0.4.0",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
    "ucloud-sdk-python3>=0.11.89",
]
